# google_test

./: MyApp.cpp  MyApp.h  README.md
test/: CMakeLists.txt  MyAppTest.cpp
